[package]
name = "rproc"
version = "0.1.0"
edition = "2018"
authors = ["Anthony Delannoy <anthony.2lannoy@gmail.com>"]
description = "Interface to the linux procfs pseudo-filesystem"
readme = "README.md"
keywords = ["procfs", "proc", "linux", "process"]
categories = ["os::unix-apis", "filesystem"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
lazy_static = "1.4.0"
